--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
-    ext.nav_version = '2.1.0'
     repositories {
         google()
         jcenter()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath BuildPlugins.androidGradlePlugin
+        classpath BuildPlugins.kotlinGradlePlugin
+        classpath BuildPlugins.navigationSafeArgsPlugin
     }
 }
 
@@ -20,43 +18,12 @@ plugins {
 }
 
 allprojects {
-    project.ext {
-        minSdk = 19
-        compileSdk = 28
-        targetSdk = 28
-    }
     repositories {
         mavenCentral()
         maven { url 'https://jitpack.io' }
         google()
     }
 }
-
-ext.versions = [
-    'okhttp' : '3.12.1',
-    'retrofit' : '2.5.0',
-    'okio': '2.2.2',
-    'acra': '5.2.1',
-    'nav_version': nav_version,
-    'paging_version': '2.1.0',
-    'koin': '1.0.2',
-    'coroutines': '1.3.2',
-    'core_testing': '2.1.0',
-    'room': '2.2.0',
-    'assertj': '2.9.1',
-    'mockito_kotlin': '2.1.0',
-    'timber': '4.7.1',
-    'lifecycle': '2.1.0',
-    'glide': '4.10.0',
-    'swiperefreshlayout' :'1.0.0',
-    'mockk': '1.9.3',
-    'appCompat': '1.1.0',
-    'recyclerView': '1.1.0-beta05',
-    'androidX': '1.2.0-beta01',
-    'material': '1.1.0-beta01',
-    'robolectric': '4.2.1',
-    'workmanager': '2.2.0'
-]
 
 allprojects {
     repositories {
