--- a/common/build.gradle
+++ b/common/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'kotlin'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
+    implementation Libraries.kotlinStdLib
+    implementation Libraries.kotlinCoroutines
 }
 
 sourceCompatibility = "8"
