--- a/commonproviders/build.gradle
+++ b/commonproviders/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion project.ext.compileSdk
+    compileSdkVersion AndroidSdk.compile
 
     defaultConfig {
-        minSdkVersion project.ext.minSdk
-        targetSdkVersion project.ext.targetSdk
+        minSdkVersion AndroidSdk.min
+        targetSdkVersion AndroidSdk.target
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -34,20 +34,20 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "androidx.appcompat:appcompat:${versions.appCompat}"
-    implementation "androidx.core:core:${versions.androidX}"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
+    implementation Libraries.appCompat
+    implementation Libraries.coreKtx
+    implementation Libraries.kotlinStdLib
+    implementation Libraries.kotlinCoroutines
 
-    implementation "com.jakewharton.timber:timber:${versions.timber}"
+    implementation Libraries.timber
 
-    implementation "org.koin:koin-android:${versions.koin}"
-    implementation "org.koin:koin-core:${versions.koin}"
+    implementation Libraries.koinAndroid
+    implementation Libraries.koinCore
 
     implementation project(':common')
-    testImplementation "org.robolectric:robolectric:${versions.robolectric}"
-    testImplementation "org.koin:koin-test:${versions.koin}"
-    testImplementation "org.assertj:assertj-core:${versions.assertj}"
-    testImplementation 'junit:junit:4.12'
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
+    testImplementation TestLibraries.robolectric
+    testImplementation TestLibraries.koinTest
+    testImplementation TestLibraries.assertjCore
+    testImplementation TestLibraries.junit
+    testImplementation TestLibraries.mockitoKotlin
 }
