--- a/data/build.gradle
+++ b/data/build.gradle
@@ -8,11 +8,11 @@ apply plugin: 'kotlin-kapt'
 
 
 android {
-    compileSdkVersion project.ext.compileSdk
+    compileSdkVersion AndroidSdk.compile
 
     defaultConfig {
-        minSdkVersion project.ext.minSdk
-        targetSdkVersion project.ext.targetSdk
+        minSdkVersion AndroidSdk.min
+        targetSdkVersion AndroidSdk.target
         versionCode 1
         versionName "1.0"
 
@@ -47,35 +47,35 @@ kapt {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "androidx.room:room-runtime:${versions.room}"
-    kapt "androidx.room:room-compiler:${versions.room}"
-    implementation "androidx.lifecycle:lifecycle-livedata:${versions.lifecycle}"
-    implementation "androidx.room:room-rxjava2:${versions.room}"
-    implementation ("androidx.room:room-ktx:${versions.room}") {
+    implementation Libraries.roomRuntime
+    kapt Libraries.roomCompiler
+    implementation Libraries.lifecycleLiveData
+    implementation Libraries.roomRxJava2
+    implementation (Libraries.roomKtx) {
         exclude group: 'org.jetbrains.kotlinx', module: 'kotlinx-coroutines-android'
     }
 
-    implementation "io.reactivex.rxjava2:rxjava:2.2.9"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:${versions.coroutines}"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
+    implementation Libraries.rxJava2
+    implementation Libraries.kotlinCoroutinesRx2
+    implementation Libraries.kotlinStdLib
+    implementation Libraries.kotlinCoroutines
 
-    implementation "com.jakewharton.timber:timber:${versions.timber}"
+    implementation Libraries.timber
 
-    implementation "org.koin:koin-android:${versions.koin}"
-    implementation "org.koin:koin-core:${versions.koin}"
+    implementation Libraries.koinAndroid
+    implementation Libraries.koinCore
     implementation project(':common')
 
-    testImplementation "org.koin:koin-test:${versions.koin}"
-    testImplementation "org.assertj:assertj-core:${versions.assertj}"
-    testImplementation 'junit:junit:4.12'
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
+    testImplementation TestLibraries.koinTest
+    testImplementation TestLibraries.assertjCore
+    testImplementation TestLibraries.junit
+    testImplementation TestLibraries.mockitoKotlin
 
-    androidTestImplementation "androidx.test.ext:junit:1.1.1"
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    androidTestImplementation "org.assertj:assertj-core:${versions.assertj}"
-    androidTestImplementation "org.koin:koin-test:${versions.koin}"
-    androidTestImplementation "androidx.room:room-testing:${versions.room}"
-    androidTestImplementation "androidx.arch.core:core-testing:${versions.core_testing}"
-    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation TestLibraries.androidXTestExtJunit
+    androidTestImplementation TestLibraries.espressoCore
+    androidTestImplementation TestLibraries.assertjCore
+    androidTestImplementation TestLibraries.koinTest
+    androidTestImplementation TestLibraries.room
+    androidTestImplementation TestLibraries.archComponentsCoreTesting
+    androidTestImplementation TestLibraries.testRunner
 }
