--- a/network/build.gradle
+++ b/network/build.gradle
@@ -7,11 +7,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion project.ext.compileSdk
+    compileSdkVersion AndroidSdk.compile
 
     defaultConfig {
-        minSdkVersion project.ext.minSdk
-        targetSdkVersion project.ext.targetSdk
+        minSdkVersion AndroidSdk.min
+        targetSdkVersion AndroidSdk.target
         versionCode 1
         versionName "1.0"
 
@@ -40,27 +40,27 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'se.ansman.kotshi:api:2.0.1'
-    kapt 'se.ansman.kotshi:compiler:2.0.1'
-    implementation "com.squareup.moshi:moshi:1.8.0"
-    implementation("com.squareup.okio:okio:${versions.okio}")
+    implementation Libraries.kotshiApi
+    kapt Libraries.kotshiCompiler
+    implementation Libraries.moshi
+    implementation Libraries.okio
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
+    implementation Libraries.kotlinStdLib
+    implementation Libraries.kotlinCoroutines
 
-    implementation "org.koin:koin-android:${versions.koin}"
-    implementation "org.koin:koin-core:${versions.koin}"
-    implementation 'org.jsoup:jsoup:1.12.1'
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
-    implementation "com.jakewharton.timber:timber:${versions.timber}"
+    implementation Libraries.koinAndroid
+    implementation Libraries.koinCore
+    implementation Libraries.jsoup
+    implementation Libraries.retrofitCoroutinesAdapter
+    implementation Libraries.timber
 
-    implementation "com.squareup.okhttp3:logging-interceptor:${versions.okhttp}"
-    implementation "com.squareup.okhttp3:okhttp:${versions.okhttp}"
-    implementation "com.squareup.retrofit2:retrofit:${versions.retrofit}"
-    implementation "com.squareup.retrofit2:converter-moshi:${versions.retrofit}"
+    implementation Libraries.okHttpLoggingInterceptor
+    implementation Libraries.okhttp
+    implementation Libraries.retrofit
+    implementation Libraries.retrofitMoshiAdapter
 
-    testImplementation "org.koin:koin-test:${versions.koin}"
-    testImplementation "org.assertj:assertj-core:${versions.assertj}"
-    testImplementation 'junit:junit:4.12'
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
+    testImplementation TestLibraries.koinTest
+    testImplementation TestLibraries.assertjCore
+    testImplementation TestLibraries.junit
+    testImplementation TestLibraries.mockitoKotlin
 }
