--- a/data/build.gradle
+++ b/data/build.gradle
@@ -41,6 +41,7 @@ android {
 kapt {
     arguments {
         arg("room.schemaLocation", "$projectDir/schemas".toString())
+        arg("room.incremental", "true")
     }
 }
 
@@ -50,13 +51,10 @@ dependencies {
     implementation Libraries.roomRuntime
     kapt Libraries.roomCompiler
     implementation Libraries.lifecycleLiveData
-    implementation Libraries.roomRxJava2
     implementation (Libraries.roomKtx) {
         exclude group: 'org.jetbrains.kotlinx', module: 'kotlinx-coroutines-android'
     }
 
-    implementation Libraries.rxJava2
-    implementation Libraries.kotlinCoroutinesRx2
     implementation Libraries.kotlinStdLib
     implementation Libraries.kotlinCoroutines
 
@@ -71,6 +69,7 @@ dependencies {
     testImplementation TestLibraries.junit
     testImplementation TestLibraries.mockitoKotlin
 
+    androidTestImplementation TestLibraries.coroutinesTest
     androidTestImplementation TestLibraries.androidXTestExtJunit
     androidTestImplementation TestLibraries.espressoCore
     androidTestImplementation TestLibraries.assertjCore
