--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,6 @@ android.enableJetifier=true
 org.gradle.configureondemand=true
 org.gradle.console=rich
 org.gradle.parallel=true
+kapt.incremental.apt=true
 android.enableUnitTestBinaryResources=true
 android.enableR8=true
