--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,9 @@ jobs:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
+          name: Run Static Code Analysis
+          command: ./gradlew detekt
+      - run:
           name: Run Tests
           command: ./gradlew lint test --stacktrace
       - store_artifacts:
