Start Daggerizing GameDealz

--- a/build.gradle
+++ b/build.gradle
@@ -57,3 +57,5 @@ tasks.withType(io.gitlab.arturbosch.detekt.Detekt) {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+apply plugin : DaggerPlugin
