--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,10 @@
-include ':app', ':network', ':data', ':domain', ':commonproviders', ':commontest', ':common', ':workers'
+include ':app', ':common-ui',
+        ':network',
+        ':data',
+        ':domain',
+        ':commonproviders',
+        ':commontest',
+        ':common',
+        ':workers',
+        ':core',
+        ':features:deals'
