--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
+buildscript { 
+    ext.kotlin_version = '1.3.61'
+
     repositories {
         google()
         jcenter()
@@ -10,7 +12,7 @@ buildscript {
         classpath BuildPlugins.androidGradlePlugin
         classpath BuildPlugins.kotlinGradlePlugin
         classpath BuildPlugins.navigationSafeArgsPlugin
-    }
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
 }
 
 plugins {
@@ -20,9 +22,9 @@ plugins {
 
 allprojects {
     repositories {
+        google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-        google()
         jcenter()
     }
 }
@@ -58,4 +60,4 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-apply plugin : DaggerPlugin
+apply plugin: DaggerPlugin
