--- a/network/build.gradle
+++ b/network/build.gradle
@@ -42,7 +42,7 @@ dependencies {
 
     implementation Libraries.kotshiApi
     kapt Libraries.kotshiCompiler
-    implementation Libraries.moshi
+    api Libraries.moshi
     implementation Libraries.okio
 
     implementation Libraries.kotlinStdLib
@@ -56,7 +56,7 @@ dependencies {
 
     implementation Libraries.okHttpLoggingInterceptor
     implementation Libraries.okhttp
-    implementation Libraries.retrofit
+    api Libraries.retrofit
     implementation Libraries.retrofitMoshiAdapter
 
     testImplementation TestLibraries.koinTest
