Move Search Feature into its own module

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,5 @@ include ':app', ':common-ui',
         ':workers',
         ':core',
         ':features:deals',
-        ':features:detail'
+        ':features:detail',
+        ':features:search'
