--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,6 +113,7 @@ dependencies {
     implementation project(':common-ui')
     implementation project(':features:deals')
     implementation project(':features:detail')
+    implementation project(':features:search')
     implementation project(':core')
     implementation project(':workers')
     implementation project(':common')
