--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,6 @@ include ':app', ':common-ui',
         ':core',
         ':features:deals',
         ':features:detail',
-        ':features:search'
+        ':features:search',
+        ':features:watchlist'
+
