--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,6 +115,7 @@ dependencies {
     implementation project(':features:detail')
     implementation project(':features:search')
     implementation project(':features:watchlist')
+    implementation project(':features:regions')
     implementation project(':core')
     implementation project(':workers')
     implementation project(':common')
