--- a/features/detail/build.gradle
+++ b/features/detail/build.gradle
@@ -47,4 +47,12 @@ dependencies {
     implementation project(':commonproviders')
     implementation project(':common-ui')
     implementation project(':core')
+
+    testImplementation TestLibraries.liveDataTestingKtx
+    testImplementation TestLibraries.liveDataTesting
+    testImplementation project(':commontest')
+    testImplementation TestLibraries.coroutinesTest
+    testImplementation TestLibraries.kotlinReflect
+    testImplementation TestLibraries.archComponentsCoreTesting
+    testImplementation TestLibraries.junit
 }
