--- a/features/detail/build.gradle
+++ b/features/detail/build.gradle
@@ -9,6 +9,7 @@ android {
         minSdkVersion AndroidSdk.min
         targetSdkVersion AndroidSdk.target
 
+        multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
     }
 
