--- a/features/deals/build.gradle
+++ b/features/deals/build.gradle
@@ -10,6 +10,7 @@ android {
         minSdkVersion AndroidSdk.min
         targetSdkVersion AndroidSdk.target
 
+        multiDexEnabled true
         buildConfigField("Integer", "DEFAULT_PAGE_SIZE", "20")
         vectorDrawables.useSupportLibrary = true
     }
