--- a/features/search/build.gradle
+++ b/features/search/build.gradle
@@ -9,6 +9,7 @@ android {
         minSdkVersion AndroidSdk.min
         targetSdkVersion AndroidSdk.target
 
+        multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
     }
 
@@ -40,7 +41,6 @@ dependencies {
     implementation Libraries.timber
     implementation Libraries.fastAdapter
     implementation Libraries.coreKtx
-    implementation Libraries.stfalImageViewer
 
     implementation project(':common')
     implementation project(':domain')
