--- a/common-ui/build.gradle
+++ b/common-ui/build.gradle
@@ -11,6 +11,7 @@ android {
         minSdkVersion AndroidSdk.min
         targetSdkVersion AndroidSdk.target
 
+        multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
     }
 
@@ -51,6 +52,7 @@ dependencies {
     implementation Libraries.stateMachine
     implementation Libraries.coreKtx
     implementation Libraries.timber
+    implementation Libraries.materialDrawer
     implementation Libraries.navigationFragmentKtx
     implementation Libraries.navigationUiKtx
 
