--- a/features/deals/build.gradle
+++ b/features/deals/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation Libraries.recyclerView
     implementation Libraries.pagingRuntimeKtx
     implementation Libraries.fragmentsKtx
+    implementation Libraries.constraintLayout
     implementation Libraries.navigationUiKtx
     implementation Libraries.swipeRefreshLayout
     implementation Libraries.navigationFragmentKtx
