Add Singleton AuthStateManager and expose a Flow

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -16,6 +16,7 @@ android {
 dependencies {
     implementation Libraries.kotlinStdLib
 
+    api project(':auth')
     implementation project(':data')
     implementation project(':network')
     implementation project(':domain')
