--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -13,7 +13,7 @@ android {
 
 dependencies {
     implementation Libraries.kotlinStdLib
-    implementation Libraries.appAuth
+    api Libraries.appAuth
     implementation Libraries.okhttpHttpUrlConnection
     implementation Libraries.fragmentsKtx
     implementation Libraries.timber
@@ -21,12 +21,13 @@ dependencies {
 
     implementation project(':common')
     implementation project(':commonproviders')
-    implementation project(':core')
     implementation project(':network')
 
     testImplementation TestLibraries.robolectric
     testImplementation TestLibraries.mockitoKotlin
     testImplementation TestLibraries.assertjCore
     testImplementation TestLibraries.junit
+    testImplementation project(':commontest')
+    testImplementation TestLibraries.coroutinesTest
     testImplementation TestLibraries.androidXTestCore
 }
