--- a/network/build.gradle
+++ b/network/build.gradle
@@ -35,6 +35,9 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions {
+        freeCompilerArgs = ["-XXLanguage:+InlineClasses"]
+    }
 }
 
 dependencies {
@@ -57,7 +60,9 @@ dependencies {
     api Libraries.retrofit
     implementation Libraries.retrofitMoshiAdapter
 
+    testImplementation TestLibraries.coroutinesTest
     testImplementation TestLibraries.assertjCore
     testImplementation TestLibraries.junit
     testImplementation TestLibraries.mockitoKotlin
 }
+
