--- a/common-ui/build.gradle
+++ b/common-ui/build.gradle
@@ -15,6 +15,8 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
 
+    testOptions.unitTests.includeAndroidResources = true
+    
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -55,9 +57,16 @@ dependencies {
     implementation Libraries.materialDrawer
     implementation Libraries.navigationFragmentKtx
     implementation Libraries.navigationUiKtx
+    implementation Libraries.kotlinFlowExtensions
 
     implementation project(':commonproviders')
     implementation project(':common')
     implementation project(':domain')
     implementation project(':core')
+
+    testImplementation TestLibraries.robolectric
+    testImplementation TestLibraries.assertjCore
+    testImplementation TestLibraries.junit
+    testImplementation TestLibraries.mockitoKotlin
+    testImplementation TestLibraries.coroutinesTest
 }
