--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include ':app', ':common-ui', ':auth',
         ':domain',
         ':commonproviders',
         ':commontest',
+        ':commonAndroidTest',
         ':common',
         ':workers',
         ':core',
