Enable build cache, and use experimental kotlin features.

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ android.enableJetifier=true
 org.gradle.configureondemand=true
 org.gradle.console=rich
 org.gradle.parallel=true
+org.gradle.caching=true
 kapt.incremental.apt=true
 android.enableUnitTestBinaryResources=true
 android.enableR8=true
