--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,11 @@
-version: 2
+version: 3
 jobs:
   build:
     working_directory: ~/code
     docker:
       - image: circleci/android:api-28-alpha
     environment:
+      CI: true
       JVM_OPTS: -Xmx3200m
       GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2 -Dkotlin.incremental=false"
     steps:
@@ -26,7 +27,7 @@ jobs:
           command: ./gradlew detekt
       - run:
           name: Run Tests
-          command: ./gradlew lint test --stacktrace
+          command: ./gradlew lintDebug testDebug --stacktrace
       - store_artifacts:
           path: app/build/reports
           destination: reports
