Introduce SavedStateHandle ViewModelFactory

--- a/commonproviders/build.gradle
+++ b/commonproviders/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation Libraries.coreKtx
     implementation Libraries.kotlinStdLib
     implementation Libraries.kotlinCoroutines
+    implementation Libraries.lifecycleViewModelSavedState
 
     implementation Libraries.timber
     implementation project(':common')
