--- a/common-ui/build.gradle
+++ b/common-ui/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation Libraries.lifecycleViewModel
     implementation Libraries.lifecycleViewModelKtx
     implementation Libraries.lifecycleRuntimeKtx
+    implementation Libraries.lifecycleJava8Common
     implementation Libraries.swipeRefreshLayout
     implementation Libraries.recyclerView
     implementation Libraries.material
@@ -63,6 +64,7 @@ dependencies {
     implementation Libraries.navigationFragmentKtx
     implementation Libraries.navigationUiKtx
     implementation Libraries.kotlinFlowExtensions
+    debugImplementation Libraries.fragmentTesting
 
     implementation project(':commonproviders')
     implementation project(':common')
