Add UITests for the fragment

--- a/features/detail/build.gradle
+++ b/features/detail/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+apply from: "../../gradle/scripts/android-test.gradle"
+
 android {
     compileSdkVersion AndroidSdk.compile
 
