--- a/commonAndroidTest/build.gradle
+++ b/commonAndroidTest/build.gradle
@@ -25,11 +25,15 @@ dependencies {
     implementation Libraries.fragmentsKtx
     implementation Libraries.coreKtx
     implementation TestLibraries.coroutinesTest
+    implementation TestLibraries.mockitoKotlin
+    implementation TestLibraries.mockitoAndroid
     implementation TestLibraries.junit
     implementation Libraries.material
+    implementation project(':core')
     implementation project(':common')
     implementation project(':common-ui')
 
+    api TestLibraries.kakao
     api TestLibraries.androidXTestCore
     api TestLibraries.testRunner
     api TestLibraries.testRules
