--- a/commonAndroidTest/build.gradle
+++ b/commonAndroidTest/build.gradle
@@ -17,6 +17,10 @@ android {
         multiDexEnabled true
     }
 
+    lintOptions {
+        warning 'InvalidPackage'
+    }
+
     compileOptions {
         sourceCompatibility 1.8
         targetCompatibility 1.8
@@ -30,6 +34,8 @@ dependencies {
     implementation Libraries.fragmentsKtx
     implementation Libraries.coreKtx
     implementation TestLibraries.coroutinesTest
+    implementation TestLibraries.mockitoKotlin
+    implementation TestLibraries.mockitoAndroid
     implementation TestLibraries.junit
     implementation Libraries.material
     implementation project(':core')
